// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Human snapshots: show and list outputs with audit > renders concise/list and single-item human outputs with and without audit (snapshots) > human-list-with-audit 1`] = `
"Found 2 work item(s):


# Audited task

ID       : TEST-1
Status   : 🟢 Open [OPEN] · Stage: Undefined | Priority: 📋 medium [MED ]
Type     : unknown
SortIndex: 0
Risk     : —
Effort   : —

# No audit

ID       : TEST-2
Status   : 🟢 Open [OPEN] · Stage: Undefined | Priority: 📋 medium [MED ]
Type     : unknown
SortIndex: 0
Risk     : —
Effort   : —

"
`;

exports[`Human snapshots: show and list outputs with audit > renders concise/list and single-item human outputs with and without audit (snapshots) > human-show-with-audit 1`] = `
"
└── # Audited task
    
    ID       : TEST-1
    Status   : 🟢 Open [OPEN] · Stage: Undefined | Priority: 📋 medium [MED ]
    Type     : unknown
    SortIndex: 0
    Risk     : —
    Effort   : —
"
`;

exports[`Human snapshots: show and list outputs with audit > renders concise/list and single-item human outputs with and without audit (snapshots) > human-show-without-audit 1`] = `
"
└── # No audit
    
    ID       : TEST-2
    Status   : 🟢 Open [OPEN] · Stage: Undefined | Priority: 📋 medium [MED ]
    Type     : unknown
    SortIndex: 0
    Risk     : —
    Effort   : —
"
`;
